--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "rem": "^0.7.0-3",
     "vue": "^2.6.10",
     "vue-router": "^3.0.5",
-    "vue-swiper": "^0.5.0"
+    "vue-swiper": "^0.5.0",
+    "weui": "^1.1.3",
+    "weui-vue": "^1.0.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.6.0",
