--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "node-sass": "^4.11.0",
     "rem": "^0.7.0-3",
+    "sass-loader": "^7.1.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.5",
     "vue-swiper": "^0.5.0",
